# awtk-hello

./: .gitignore  CMakeLists.txt  README.md  SConstruct  awtk_hello_build.json  awtk_hello_web.json  build.json  project.json  update_res.py
3rd/sqlite3/: SConscript
assets/: __assets_default.inc
assets/inc/fonts/: led.res
assets/inc/images/: arrow_down_n.res  arrow_down_p.data  arrow_left_n.data  arrow_left_o.res  arrow_right_n.data  arrow_right_n.res  arrow_right_o.res  arrow_up_o.data  arrow_up_o.res  arrow_up_p.data  check.data  check.res  earth.data  edit_clear_n.data  edit_clear_o.data  edit_clear_o.res  edit_clear_p.data  edit_clear_p.res  empty.data  radio_unchecked.data  unchecked.data  unchecked.res
assets/inc/styles/: default.data  main.data  window1.data
assets/inc/ui/: main.data  window1.data
assets/raw/styles/: default.xml  window1.xml
assets/raw/ui/: main.xml
design/default/styles/: main.xml
design/default/ui/: window1.xml  window2.xml
docs/: how_to_integrate_3rd_libs.md
res/inc/images/: arrow_down_n.data  arrow_down_o.data  arrow_down_o.res  arrow_down_p.data  arrow_down_p.res  arrow_left_n.res  arrow_left_o.data  arrow_left_o.res  arrow_left_p.data  arrow_left_p.res  arrow_right_n.data  arrow_right_n.res  arrow_right_o.data  arrow_right_p.data  arrow_right_p.res  arrow_up_n.data  arrow_up_n.res  arrow_up_o.res  arrow_up_p.res  checked.data  checked.res  earth.res  (+8 more)
scripts/: update_res.py
src/: SConscript  assets.c  assets_default.inc  awtk_main.c  main.c  resource.c  settings.c  settings.h  window1.c  window1.h  window2.c  window2.h
(+41 files in other folders)
